--- a/AIText/Views/Shared/_Layout.cshtml
+++ b/AIText/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </header>
-        <div class="navbar-expand-md">
+        <div class="navbar-expand-md mb-2">
             <div class="collapse navbar-collapse" id="navbar-menu">
                 <div class="navbar navbar-light">
                     <div class="container-fluid">
@@ -91,6 +91,26 @@
                                     </span>
                                     <span class="nav-link-title">
                                         Jacket Setting
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="nav-item   @(Url.ActionContext.HttpContext.Request.Path.Value == "/AiSetting" ? "active" : "") ">
+                                <a class="nav-link" href="@Url.Content("~/AiSetting")">
+                                    <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><polyline points="5 12 3 12 12 3 21 12 19 12" /><path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" /><path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" /></svg>
+                                    </span>
+                                    <span class="nav-link-title">
+                                        AiSetting
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="nav-item   @(Url.ActionContext.HttpContext.Request.Path.Value == "/SendRecord" ? "active" : "") ">
+                                <a class="nav-link" href="@Url.Content("~/SendRecord")">
+                                    <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><polyline points="5 12 3 12 12 3 21 12 19 12" /><path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" /><path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" /></svg>
+                                    </span>
+                                    <span class="nav-link-title">
+                                        SendRecord
                                     </span>
                                 </a>
                             </li>
