--- a/AIText/Views/Shared/_NullLayOut.cshtml
+++ b/AIText/Views/Shared/_NullLayOut.cshtml
@@ -17,22 +17,23 @@
     <link rel="stylesheet" href="~/lib/sco/scojs.css">
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 </head>
-@RenderBody()
-<!-- Libs JS -->
-<!-- Tabler Core -->
-<script src="~/dist/js/tabler.min.js"></script>
-<script src="~/lib/jquery.unobtrusive-ajax.min.js"></script>
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+<body>
+    @RenderBody()
+    <!-- Libs JS -->
+    <!-- Tabler Core -->
+    <script src="~/dist/js/tabler.min.js"></script>
+    <script src="~/lib/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 
 
-<script src="~/lib/sco/sco.confirm.js"></script>
-<script src="~/lib/sco/sco.message.js"></script>
-<script src="~/lib/sco/sco.modal.js"></script>
-<script src="/lib/box/box.js?1=1"></script>
+    <script src="~/lib/sco/sco.confirm.js"></script>
+    <script src="~/lib/sco/sco.message.js"></script>
+    <script src="~/lib/sco/sco.modal.js"></script>
+    <script src="/lib/box/box.js?1=1"></script>
 
 
-<script src="~/js/site.js" asp-append-version="true"></script>
-
+    <script src="~/js/site.js" asp-append-version="true"></script>
+</body>
 </html>
