--- a/AIText/Views/WpAccount/Add.cshtml
+++ b/AIText/Views/WpAccount/Add.cshtml
@@ -1,5 +1,57 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model AIText.WpAccount
 @{
+
 }
+<div class="modal-content">
+    <form class="form-horizontal" data-ajax="true" data-ajax-complete="ajaxRvCompleted" asp-action="DoAdd" asp-controller="WpAccount" data-ajax-method="post">
+
+        <div class="modal-body">
+
+            <div class="row mb-3 align-items-end">
+
+                <div class="col">
+                    <label class="form-label">网站</label>
+                    <input asp-for="Site" class="bg-focus form-control parsley-validated" />
+                    <span asp-validation-for="Site" class="text-danger"> </span>
+                </div>
+                <div class="col">
+                    <label class="form-label">名称</label>
+                    <input asp-for="Username" class="bg-focus form-control parsley-validated" />
+                    <span asp-validation-for="Username" class="text-danger"> </span>
+                </div>
+            </div>
+
+            <div class="row mb-3 align-items-end">
+
+                <div class="col">
+                    <label class="form-label">AI平台</label>
+                    <input asp-for="Password" type="text" class="bg-focus form-control parsley-validated" />
+                    <span asp-validation-for="Password" class="text-danger"> </span>
+                </div>
+            </div>
+            <div class="row mb-3 align-items-end">
+
+                <div class="col">
+                    <label class="form-label">AccessKey</label>
+                    <input asp-for="AccessKey" type="text" class="bg-focus form-control parsley-validated" />
+                    <span asp-validation-for="AccessKey" class="text-danger"> </span>
+                </div>
+            </div>
+
+            <div class="row mb-3 align-items-end">
+                <div class="col">
+                    <label class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="IsEnable">
+                        <span class="form-check-label">是否启用</span>
+                    </label>
+                </div>
+            </div>
+
+        </div>
+        <div class="modal-footer">
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">创建</button>
+        </div>
+    </form>
+
+</div>
+
