--- a/AIText/Views/WpAccount/Index.cshtml
+++ b/AIText/Views/WpAccount/Index.cshtml
@@ -3,7 +3,7 @@
     <div class="row align-items-center mb-2">
         <div class="col">
             <h2 class="page-title">
-                Ai账号管理
+               wordpress账号管理
             </h2>
         </div>
         <div class="col-auto ms-auto d-print-none">
@@ -31,9 +31,9 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-2">
-                        <div class="subheader mb-2 mt-2">提示词</div>
+                        <div class="subheader mb-2 mt-2">网站</div>
                         <div>
-                            <input type="text" name="Prompt" class="form-control" placeholder="" autocomplete="off">
+                            <input type="text" name="Site" class="form-control" placeholder="" autocomplete="off">
                         </div>
                     </div>
                     <div class="col-2">
