--- a/AIText/Views/AiAccount/Index.cshtml
+++ b/AIText/Views/AiAccount/Index.cshtml
@@ -1,5 +1,67 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model AIText.Models.AiAccount.AiAccountSearch
+<div class="page-header d-print-none ">
+    <div class="row align-items-center mb-2">
+        <div class="col">
+            <h2 class="page-title">
+                wordpress账号管理
+            </h2>
+        </div>
+        <div class="col-auto ms-auto d-print-none">
+            <div class="btn-list">
+                <a data-src="/AiAccount/Add" title="创建账号" class="btn btn-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
+                    添加
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row  justify-content-center">
+    <div class="col-12 col-lg-12  ">
+        <form data-ajax="true" data-ajax-update="#divreplace" data-ajax-mode="replace" asp-action="DoList" asp-controller="AiAccount" data-ajax-method="post" method="post" class="card">
+            <div class="card-header">
+                <div class="row" style="width:100%;">
+                    <h4 class="card-title col">搜索</h4>
+                    <div class="col-auto ms-auto">
+                    </div>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-2">
+                        <div class="subheader mb-2 mt-2">网站</div>
+                        <div>
+                            <input type="text" name="Site" class="form-control" placeholder="" autocomplete="off">
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <div class="subheader mb-2 mt-2" style="visibility:hidden">占位</div>
+                        <div>
+                            <button class="btn btn-primary w-100">
+                                查找
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-9 row">
+                    </div>
+                </div>
+            </div>
+
+        </form>
+
+    </div>
+
+    <div class="col-12  col-lg-12 mt-1">
+        <div class="card" id="divreplace">
+            @Html.Action("DoList", Model)
+        </div>
+    </div>
+
+
+
+</div>
