--- a/AIText/Views/AiSetting/Edit.cshtml
+++ b/AIText/Views/AiSetting/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@model AIText.AiSetting
 @{
-
+    var wpList = ViewData["wpList"] as List<WpAccount>;
+    var aiList = ViewData["aiList"] as List<AiAccount>;
 }
 <div class="modal-content">
-    <form class="form-horizontal" data-ajax="true" data-ajax-complete="ajaxRvCompleted" asp-action="DoAdd" asp-controller="AiSetting" data-ajax-method="post">
+    <form class="form-horizontal" data-ajax="true" data-ajax-complete="ajaxRvCompleted" asp-action="DoEdit" asp-controller="AiSetting" data-ajax-method="post">
         @Html.HiddenFor(obj => obj.Id)
         <div class="modal-body">
 
@@ -25,16 +26,34 @@
 
                 <div class="col">
                     <label class="form-label">AI平台</label>
-                    <input asp-for="AiSite" type="password" class="bg-focus form-control parsley-validated" />
-                    <span asp-validation-for="AiSite" class="text-danger"> </span>
+                    <select asp-for="AiSiteId" class="form-control">
+                        <option value=""></option>
+                        @if (aiList != null)
+                        {
+                            @foreach (var item in aiList)
+                            {
+                                <option value="@item.Id">@item.Site</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="AiSiteId" class="text-danger"> </span>
                 </div>
             </div>
             <div class="row mb-3 align-items-end">
 
                 <div class="col">
                     <label class="form-label">Wordpress站点</label>
-                    <input asp-for="WpSite" type="password" class="bg-focus form-control parsley-validated" />
-                    <span asp-validation-for="WpSite" class="text-danger"> </span>
+                    <select asp-for="WpSiteId" class="form-control">
+                        <option value=""></option>
+                        @if (aiList != null)
+                        {
+                            @foreach (var item in wpList)
+                            {
+                                <option value="@item.Id">@item.Site</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="WpSiteId" class="text-danger"> </span>
                 </div>
             </div>
             <div class="row mb-3 align-items-end">
@@ -55,7 +74,7 @@
 
         </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">创建</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">修改</button>
         </div>
     </form>
 
