--- a/AIText/Views/AiAccount/Add.cshtml
+++ b/AIText/Views/AiAccount/Add.cshtml
@@ -14,14 +14,15 @@
                     <input asp-for="Site" class="bg-focus form-control parsley-validated" />
                     <span asp-validation-for="Site" class="text-danger"> </span>
                 </div>
-                <div class="col">
-                    <label class="form-label">ApiKey</label>
-                    <input asp-for="ApiKey" class="bg-focus form-control parsley-validated" />
-                    <span asp-validation-for="ApiKey" class="text-danger"> </span>
-                </div>
+                
             </div>
-
-           
+            <div class="row mb-3 align-items-end">
+            <div class="col">
+                <label class="form-label">ApiKey</label>
+                <input asp-for="ApiKey" class="bg-focus form-control parsley-validated" />
+                <span asp-validation-for="ApiKey" class="text-danger"> </span>
+            </div>
+            </div>
 
             <div class="row mb-3 align-items-end">
                 <div class="col">
