--- a/AIText/Views/WpAccount/Add.cshtml
+++ b/AIText/Views/WpAccount/Add.cshtml
@@ -24,7 +24,7 @@
             <div class="row mb-3 align-items-end">
 
                 <div class="col">
-                    <label class="form-label">AI平台</label>
+                    <label class="form-label">密码</label>
                     <input asp-for="Password" type="text" class="bg-focus form-control parsley-validated" />
                     <span asp-validation-for="Password" class="text-danger"> </span>
                 </div>
