--- a/AIText/Views/AiAccount/Edit.cshtml
+++ b/AIText/Views/AiAccount/Edit.cshtml
@@ -37,7 +37,7 @@
 
         </div>
         <div class="modal-footer">
-            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">创建</button>
+            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">修改</button>
         </div>
     </form>
 
