--- a/AIText/Views/BusinessKeyword/ToImport.cshtml
+++ b/AIText/Views/BusinessKeyword/ToImport.cshtml
@@ -19,8 +19,6 @@
                     <th>Potential Traffic</th>
                     <th>Keyword Difficulty</th>
                     <th>CPC (USD)</th>
-                    <th>创建时间</th>
-                    <th>更新时间</th>
                 </tr>
             </thead>
             <tbody>
@@ -67,6 +65,7 @@
 
                         </tr>
                     }
+                    loopi++;
                 }
             </tbody>
         </table>
