--- a/AIText/Views/SiteKeyword/ToImport.cshtml
+++ b/AIText/Views/SiteKeyword/ToImport.cshtml
@@ -87,6 +87,7 @@
 
                         </tr>
                     }
+                    loopi++;
                 }
             </tbody>
         </table>
