--- a/AIText/Views/WpAccount/ToImport.cshtml
+++ b/AIText/Views/WpAccount/ToImport.cshtml
@@ -58,6 +58,7 @@
 
                         </tr>
                     }
+                    loopi++;
                 }
             </tbody>
         </table>
