哩布哩布绘图API调用

--- a/AIText/Views/Login/Index.cshtml
+++ b/AIText/Views/Login/Index.cshtml
@@ -10,7 +10,7 @@
             </div>
             <form class="card card-md" data-ajax="true" data-ajax-complete="Completed" asp-action="DoLogin" asp-controller="Login" data-ajax-method="post" autocomplete="off">
                 <div class="card-body">
-                    <h2 class="card-title text-center mb-4">邮件管理后台</h2>
+                    <h2 class="card-title text-center mb-4">AI自动发文后台</h2>
                     <div class="mb-3">
                         <label class="form-label">账号</label>
                         <input type="text" name="account" class="form-control" placeholder="">
