--- a/AIText/Views/SiteAccount/Edit.cshtml
+++ b/AIText/Views/SiteAccount/Edit.cshtml
@@ -1,9 +1,9 @@
-﻿@model AIText.WpAccount
+﻿@model AIText.SiteAccount
 @{
 
 }
 <div class="modal-content">
-    <form class="form-horizontal" data-ajax="true" data-ajax-complete="ajaxRvCompleted" asp-action="DoEdit" asp-controller="WpAccount" data-ajax-method="post">
+    <form class="form-horizontal" data-ajax="true" data-ajax-complete="ajaxRvCompleted" asp-action="DoEdit" asp-controller="SiteAccount" data-ajax-method="post">
         @Html.HiddenFor(obj => obj.Id)
         <div class="modal-body">
 
