--- a/AIText/Views/AiSetting/Edit.cshtml
+++ b/AIText/Views/AiSetting/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AIText.AiSetting
 @{
-    var wpList = ViewData["wpList"] as List<WpAccount>;
+    var wpList = ViewData["wpList"] as List<SiteAccount>;
     var aiList = ViewData["aiList"] as List<AiAccount>;
 }
 <div class="modal-content">
