--- a/AIText/Views/SiteAccount/Import.cshtml
+++ b/AIText/Views/SiteAccount/Import.cshtml
@@ -11,7 +11,7 @@
         <div class="col-lg-12">
             <div class="card-body">
 
-                <form id="prepareExcel" class="card" data-ajax="true" data-ajax-complete="previewComplete" data-ajax-update="#divlist" data-ajax-mode="replace" asp-action="ToImport" asp-controller="WpAccount" enctype="multipart/form-data" data-ajax-method="post">
+                <form id="prepareExcel" class="card" data-ajax="true" data-ajax-complete="previewComplete" data-ajax-update="#divlist" data-ajax-mode="replace" asp-action="ToImport" asp-controller="SiteAccount" enctype="multipart/form-data" data-ajax-method="post">
                     <div class="row card-body">
                         <div class="col-12 mb-3">
 
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                 </form>
-                <form id="importForm" class="card" data-ajax="true" data-ajax-complete="ajaxRvCompletedToWpAccount" data-ajax-update="#errMsgDiv" asp-action="DoImport1" asp-controller="WpAccount" enctype="multipart/form-data" data-ajax-method="post"
+                <form id="importForm" class="card" data-ajax="true" data-ajax-complete="ajaxRvCompletedToSiteAccount" data-ajax-update="#errMsgDiv" asp-action="DoImport1" asp-controller="SiteAccount" enctype="multipart/form-data" data-ajax-method="post"
                       style="display:none;">
                     <div class="row card-body">
                         <div class=" card-footer text-end">
@@ -55,7 +55,7 @@
 
 
 
-    var ajaxRvCompletedToWpAccount = function (data) {
+    var ajaxRvCompletedToSiteAccount = function (data) {
         if (data.status != 200) {
             $.tipsError(data.responseText);
             return;
@@ -63,7 +63,7 @@
         if (data.responseJSON != false && data.responseJSON.status) {
             $.tipsOk("操作成功!");
             setTimeout(function () {
-                window.location = '/WpAccount/Index';
+                window.location = '/SiteAccount/Index';
             }, 1500);
         }
         else {
