--- a/AIText/Views/SiteAccount/Index.cshtml
+++ b/AIText/Views/SiteAccount/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@model AIText.Models.WpAccount.WpAccountSearch
+﻿@model AIText.Models.SiteAccount.SiteAccountSearch
 <div class="page-header d-print-none ">
     <div class="row align-items-center mb-2">
         <div class="col">
             <h2 class="page-title">
-               wordpress账号管理
+               站点账号管理
             </h2>
         </div>
         <div class="col-auto ms-auto d-print-none">
             <div class="btn-list">
-                <a data-src="/WpAccount/Add"  title="创建账号" class="btn btn-primary">
+                <a data-src="/SiteAccount/Add"  title="创建账号" class="btn btn-primary">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
                     添加
                 </a>
@@ -20,7 +20,7 @@
 
 <div class="row  justify-content-center">
     <div class="col-12 col-lg-12  ">
-        <form data-ajax="true" data-ajax-update="#divreplace" data-ajax-mode="replace" asp-action="DoList" asp-controller="WpAccount" data-ajax-method="post" method="post" class="card">
+        <form data-ajax="true" data-ajax-update="#divreplace" data-ajax-mode="replace" asp-action="DoList" asp-controller="SiteAccount" data-ajax-method="post" method="post" class="card">
             <div class="card-header">
                 <div class="row" style="width:100%;">
                     <h4 class="card-title col">搜索</h4>
